--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Number verification with OTP</title>
-    <link href="assets/css/login.css" rel="stylesheet" type="text/html">
-    <!-- <style>
+    <style>
         .container {
             width: 302px;
             height: 175px;
@@ -42,7 +41,7 @@
             height: 40px;
             outline: none;
         }
-    </style> -->
+    </style>
 </head>
 
 <body>
@@ -58,12 +57,6 @@
             <input type="submit" value="Login With Google" id="LoginScreen">
         </div>
 
-        <!-- <div id="sender">
-            <form action="/create" method="post">
-                <input type="submit" value="Login With Google" id="LoginScreen"><br><br>
-                <input type="submit" value="Log Out With Google" id="LogoutScreen">
-            </form>
-        </div> -->
         <!-- <div id="verifier">
             <h3>Enter The OTP: </h3>
             <input type="text" id="verificationcode" placeholder="OTP Code">
