--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -45,22 +45,8 @@
             <input type="button" id="verify" value="Verify" onClick="codeverify()">
         </div> -->
     </div>
+    <script src="/assets/scripts/dashboard.js"></script>
     <script>
-
-        const bttn1 = document.getElementById("books__assessment");
-        bttn1.addEventListener("click", function(){
-            location.href = "/Assessment";
-        })
-
-        const bttn2 = document.getElementById("video__assessment");
-        bttn2.addEventListener("click", function(){
-            location.href = "/Assessment";
-        })
-
-        const bttn3 = document.getElementById("text__assessment");
-        bttn3.addEventListener("click", function(){
-            location.href = "/Assessment";
-        })
 
         // Import the functions you need from the SDKs you need
         // import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.11/firebase-app.js";
