--- a/views/Assessment.ejs
+++ b/views/Assessment.ejs
@@ -30,6 +30,8 @@
         <hr class="middle__hr">
     </div>
     <div class="bottom__container">
+        <!-- <input type="file" id="photo">
+        <button id="uploadimage">Upload Image</button> -->
         <span class="bottom__text">History</span>
         <div class="history__box"></div>
     </div>
@@ -76,7 +78,7 @@
                             <option value="English">English</option>
                         </select>
                     </div>
-                    <button id="btn-1" type="submit" class="btn">Submit</button>
+                    <button id="btn-1" class="btn">Submit</button>
                 </form>
             </div>
         </div>
@@ -90,116 +92,97 @@
             </div>
 
             <div class="form-div-2">
-                <form action="/teachers" method="post" class="form-container-2">
-                    <span class="form-text-2">Questions</span>
-                    <div class="custom-div">
-                        <div id = "custom-q-div"> 
-                            <input type="text" id="common-1" placeholder="Type Your Question Here" name="question">
-                            <button id="Q_btn"><img src="/assets/images/Group 11112.svg" alt=""></button>
-                        </div>
-
-                       <div id="custom-q-div">
-                           <input type="text" id="common-2" placeholder="Type Option A Here" name="option_a">
-                           <button id="opt_btn"><img src="/assets/images/Group 11112.svg" alt=""></button>
-                       </div>
-
-                       <div id="custom-q-div">
-                        <input type="text" id="common-2" placeholder="Type Option B Here" name="option_b">
-                        <button id="opt_btn"><img src="/assets/images/Group 11112.svg" alt=""></button>
-                       </div>
-
-                       <div id="custom-q-div">
-                        <input type="text" id="common-2" placeholder="Type Option C Here" name="option_c">
-                        <button id="opt_btn"><img src="/assets/images/Group 11112.svg" alt=""></button>
-                       </div>
-                        
-                       <div id="custom-q-div">
-                        <input type="text" id="common-2" placeholder="Type Option D Here" name="option_d">
-                        <button id="opt_btn"><img src="/assets/images/Group 11112.svg" alt=""></button>
-                       </div>
+                <div class="custom-div">
+                    <div id="custom-q-div">
+                        <input type="text" id="common-1" placeholder="Type Your Question Here" name="question">
+                        <label for="photo"><img id="Q_btn" src="/assets/images/Group 11112.svg" alt=""></label>
+                        <input type="file" id="photo" style="display: none;" />
                     </div>
-                    <button type="submit" class="btn-2">Next</button>
-                </form>
+                    <div id="custom-q-div">
+                        <input type="text" id="common-2" placeholder="Type Option A Here" name="option_a">
+                        <label for="photo"><img id="opt_btn" src="/assets/images/Group 11112.svg" alt=""></label>
+                        <input type="file" id="photo" style="display: none" />
+                    </div>
+                    <div id="custom-q-div">
+                        <input type="text" id="common-2" placeholder="Type Option B Here" name="option_b">
+                        <label for="photo"><img id="opt_btn" src="/assets/images/Group 11112.svg" alt=""></label>
+                        <input type="file" id="photo" style="display: none" />
+                    </div>
+                    <div id="custom-q-div">
+                        <input type="text" id="common-2" placeholder="Type Option C Here" name="option_c">
+                        <label for="photo"><img id="opt_btn" src="/assets/images/Group 11112.svg" alt=""></label>
+                        <input type="file" id="photo" style="display: none" />
+                    </div>
+                    <div id="custom-q-div">
+                        <input type="text" id="common-2" placeholder="Type Option D Here" name="option_d">
+                        <label for="photo"><img id="opt_btn" src="/assets/images/Group 11112.svg" alt=""></label>
+                        <input type="file" id="photo" style="display: none" />
+                    </div>
+                    <div id="custom-input-div">
+                        <button id="uploadImage" class="btn-2">Next</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 
-    <script>
+    <script src="/assets/scripts/assessment.js"></script>
+    <script type="module">
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.8.1/firebase-app.js";
+        import { getStorage, ref, uploadBytesResumable, getDownloadURL } from "https://www.gstatic.com/firebasejs/9.8.1/firebase-storage.js";
 
-        var btn = document.getElementById("single__upload");
+        const firebaseConfig = {
+            apiKey: "AIzaSyDNFbXQo3Fd7PYfWBwGJd6XdihZ3w-yEvk",
+            authDomain: "node-project-c4942.firebaseapp.com",
+            databaseURL: "https://node-project-c4942-default-rtdb.firebaseio.com",
+            projectId: "node-project-c4942",
+            storageBucket: "node-project-c4942.appspot.com",
+            messagingSenderId: "581470710657",
+            appId: "1:581470710657:web:a4792037ef1d415c375680",
+            measurementId: "G-HQZDXNGMJ3"
+        };
 
-        var modal = document.getElementById("myModal");
+        const firebaseApp = initializeApp(firebaseConfig);
+        const storage = getStorage(firebaseApp);
 
-        // Get the <span> element that closes the modal
-        var span = document.getElementsByClassName("close")[0];
+        function uploadImage() {
+            const file = document.getElementById("photo").files[0];
+            const name = new Date() + "-" + file.name;
+            const storageRef = ref(storage, `Images/${name}`);
+            const metadata = {
+                contentType: file.type,
+            };
+            const uploadTask = uploadBytesResumable(storageRef, file, metadata);
 
-        // When the user clicks the button, open the modal 
-        btn.onclick = function () {
-            modal.style.display = "block";
-        }
-
-        // When the user clicks on <span> (x), close the modal
-        /* span.onclick = function () {
-            modal.style.display = "none";
-        } */
-        span.addEventListener('click', () => {
-            closeModal();
-        });
-
-        function closeModal(){
-            return new Promise((resolve, reject) => {
-                modal.style.display = "none";
-                resolve();
-            })
-        }
-
-        // When the user clicks anywhere outside of the modal, close it
-        window.addEventListener('click', (event) => {
-            if (event.target == modal) {
-                modal.style.display = "none";
+            uploadTask.on('state_changed', (snapshot) => {
+                // Observe state change events such as progress, pause, and resume
+                // Get task progress, including the number of bytes uploaded and the total number of bytes to be uploaded
+                const progress = (snapshot.bytesTransferred / snapshot.totalBytes) * 100;
+                console.log('Upload is ' + progress + '% done');
+                switch (snapshot.state) {
+                    case 'paused':
+                        console.log('Upload is paused');
+                        break;
+                    case 'running':
+                        console.log('Upload is running');
+                        break;
+                }
+            },
+            (error) => {
+                // Handle unsuccessful uploads
+            },
+            () => {
+                // Handle successful uploads on complete
+                // For instance, get the download URL: https://firebasestorage.googleapis.com/...
+                window.alert("File Uploaded Successfully!!");
+                getDownloadURL(uploadTask.snapshot.ref).then((downloadURL) => {
+                    console.log('File available at', downloadURL);
+                });
             }
-        });
-
-
-        /* For the Second Modal */
-
-        var bttn = document.getElementById("btn-1");
-        var modal__2 = document.getElementById("Modal__2");
-
-        // Get the <span> element that closes the modal-2
-        var span__2 = document.getElementsByClassName("close-2")[0];
-
-        // When the user clicks the button, open the modal-2 
-        bttn.addEventListener('click', () => {
-            openModal()
-            .then(() => closeModal())
-        });
-
-        function openModal(){
-            return new Promise((resolve, reject) => {
-                modal__2.style.display = "block";
-                resolve();
-            })
-        }        
-
-        // When the user clicks on <span> (x), close the modal-2
-        span__2.addEventListener('click', () => {
-            closeModal_2();
-        });
-
-        function closeModal_2(){
-            return new Promise((resolve, reject) => {
-                modal__2.style.display = "none";
-                resolve();
-            })
+            );
         }
 
-        // When the user clicks anywhere outside of the modal-2, close it
-        window.onclick = function (event) {
-            if (event.target == modal__2) {
-                modal__2.style.display = "none";
-            }
-        }
+        document.getElementById("uploadImage").onclick = uploadImage
     </script>
 </body>
 
