--- a/views/Assessment.ejs
+++ b/views/Assessment.ejs
@@ -78,7 +78,7 @@
                             <option value="English">English</option>
                         </select>
                     </div>
-                    <button id="btn-1" class="btn">Submit</button>
+                    <button id="btn-1" class="btn">Next</button>
                 </form>
             </div>
         </div>
@@ -88,44 +88,45 @@
         <!-- Modal content -->
         <div class="modal-content-2">
             <div class="close-div-2">
+                <span class="back-2">&#8249;</span>
                 <span class="close-2">&times;</span>
             </div>
 
             <div class="form-div-2">
+                <span class="modal_2_text">Questions</span>
                 <div class="custom-div">
                     <div id="custom-q-div">
                         <input type="text" id="common-1" placeholder="Type Your Question Here" name="question">
-                        <label for="photo"><img id="Q_btn" src="/assets/images/Group 11112.svg" alt=""></label>
-                        <input type="file" id="photo" style="display: none;" />
+                        <label for="photo-1"><img id="Q_btn" src="/assets/images/Group 11112.svg" alt=""></label>
+                        <input class="optImage" type="file" id="photo-1" style="display: none;" />
                     </div>
                     <div id="custom-q-div">
                         <input type="text" id="common-2" placeholder="Type Option A Here" name="option_a">
-                        <label for="photo"><img id="opt_btn" src="/assets/images/Group 11112.svg" alt=""></label>
-                        <input type="file" id="photo" style="display: none" />
+                        <label for="photo-2"><img id="opt_btn" src="/assets/images/Group 11112.svg" alt=""></label>
+                        <input class="optImage" type="file" id="photo-2" style="display: none" />
                     </div>
                     <div id="custom-q-div">
                         <input type="text" id="common-2" placeholder="Type Option B Here" name="option_b">
-                        <label for="photo"><img id="opt_btn" src="/assets/images/Group 11112.svg" alt=""></label>
-                        <input type="file" id="photo" style="display: none" />
+                        <label for="photo-3"><img id="opt_btn" src="/assets/images/Group 11112.svg" alt=""></label>
+                        <input class="optImage" type="file" id="photo-3" style="display: none" />
                     </div>
                     <div id="custom-q-div">
                         <input type="text" id="common-2" placeholder="Type Option C Here" name="option_c">
-                        <label for="photo"><img id="opt_btn" src="/assets/images/Group 11112.svg" alt=""></label>
-                        <input type="file" id="photo" style="display: none" />
+                        <label for="photo-4"><img id="opt_btn" src="/assets/images/Group 11112.svg" alt=""></label>
+                        <input class="optImage" type="file" id="photo-4" style="display: none" />
                     </div>
                     <div id="custom-q-div">
                         <input type="text" id="common-2" placeholder="Type Option D Here" name="option_d">
-                        <label for="photo"><img id="opt_btn" src="/assets/images/Group 11112.svg" alt=""></label>
-                        <input type="file" id="photo" style="display: none" />
+                        <label for="photo-5"><img id="opt_btn" src="/assets/images/Group 11112.svg" alt=""></label>
+                        <input class="optImage" type="file" id="photo-5" style="display: none" />
                     </div>
                     <div id="custom-input-div">
-                        <button id="uploadImage" class="btn-2">Next</button>
+                        <button id="uploadImage" class="btn-2">Submit</button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
     <script src="/assets/scripts/assessment.js"></script>
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.8.1/firebase-app.js";
@@ -145,20 +146,50 @@
         const firebaseApp = initializeApp(firebaseConfig);
         const storage = getStorage(firebaseApp);
 
-        function uploadImage() {
-            const file = document.getElementById("photo").files[0];
-            const name = new Date() + "-" + file.name;
-            const storageRef = ref(storage, `Images/${name}`);
+        var file;
+        function getfile() {
+            var pic = document.getElementsByClassName("optImage");
+
+            //var lengthOfPic = pic.files.length;
+
+            // selected file is that file which user chosen by html form 
+            for (let i = 0; i < pic.length; i++) {
+                if(pic[i].files[0]){
+                    file = pic[i].files[0];
+                    var fileName = file.name;
+                    // console.log('before ' + i);
+                    myfunction(fileName);
+                    // console.log('after ' + i);
+                }
+            }
+
+            // make save button disabled for few seconds that has id='submit_link' 
+            // document.getElementById('submit_link').setAttribute('disabled', 'true');
+            // call below written function 
+        }
+
+        function myfunction(fileName) {
+            // select unique name for everytime when image uploaded 
+            // Date.now() is function that give current timestamp 
+            const name = new Date() + "-" + fileName;
+
+            // make ref to your firebase storage and select images folder 
+            var storageRef = ref(storage, `Images/${name}`);
+
             const metadata = {
                 contentType: file.type,
             };
+
+            // put file to firebase 
             const uploadTask = uploadBytesResumable(storageRef, file, metadata);
 
+            // all working for progress bar that in html 
+            // to indicate image uploading... report 
             uploadTask.on('state_changed', (snapshot) => {
-                // Observe state change events such as progress, pause, and resume
+                //Observe state change events such as progress, pause, and resume
                 // Get task progress, including the number of bytes uploaded and the total number of bytes to be uploaded
                 const progress = (snapshot.bytesTransferred / snapshot.totalBytes) * 100;
-                console.log('Upload is ' + progress + '% done');
+                console.log(fileName + ' - Upload is ' + progress + '% done');
                 switch (snapshot.state) {
                     case 'paused':
                         console.log('Upload is paused');
@@ -167,22 +198,100 @@
                         console.log('Upload is running');
                         break;
                 }
-            },
-            (error) => {
-                // Handle unsuccessful uploads
-            },
-            () => {
+            }, function (error) {
+                console.log(error);
+            }, () => {
                 // Handle successful uploads on complete
                 // For instance, get the download URL: https://firebasestorage.googleapis.com/...
-                window.alert("File Uploaded Successfully!!");
                 getDownloadURL(uploadTask.snapshot.ref).then((downloadURL) => {
                     console.log('File available at', downloadURL);
-                });
+                })
+                .then(() => {
+                    window.alert("File Uploaded Successfully!!");
+                })
             }
             );
-        }
+        };
 
-        document.getElementById("uploadImage").onclick = uploadImage
+        document.getElementById("uploadImage").onclick = getfile
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        // function uploadImage() {
+        //     const file = document.getElementById("photo").files[0];
+
+        //     // for(let i = 0; i < files.length; i++) {
+        //     //     // if(files[i].files[0])
+        //     //         console.log('>>> ', files[i].files[0]);
+        //     // }
+        //     const name = new Date() + "-" + file.name;
+        //     const storageRef = ref(storage, `Images/${name}`);
+        //     const metadata = {
+        //         contentType: file.type,
+        //     };
+        //     const uploadTask = uploadBytesResumable(storageRef, file, metadata);
+        //     console.log(uploadTask);
+
+        //     uploadTask.on('state_changed', (snapshot) => {
+        //         // Observe state change events such as progress, pause, and resume
+        //         // Get task progress, including the number of bytes uploaded and the total number of bytes to be uploaded
+        //         const progress = (snapshot.bytesTransferred / snapshot.totalBytes) * 100;
+        //         console.log('Upload is ' + progress + '% done');
+        //         switch (snapshot.state) {
+        //             case 'paused':
+        //                 console.log('Upload is paused');
+        //                 break;
+        //             case 'running':
+        //                 console.log('Upload is running');
+        //                 break;
+        //         }
+        //     },
+        //     (error) => {
+        //         // Handle unsuccessful uploads
+        //     },
+        //     () => {
+        //         // Handle successful uploads on complete
+        //         // For instance, get the download URL: https://firebasestorage.googleapis.com/...
+        //         window.alert("File Uploaded Successfully!!");
+        //         getDownloadURL(uploadTask.snapshot.ref).then((downloadURL) => {
+        //             console.log('File available at', downloadURL);
+        //         });
+        //     }
+        //     );
+        // }
+        //document.getElementById("uploadImage").onclick = uploadImage
     </script>
 </body>
 
