--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,10 +15,29 @@
         <img class="login__img" src="/assets/images/login_screen_logo.svg" alt="iPrep Logo">
         <span class="login_text">Log in</span>
         <span class="span_text">Please Choose a Method Below To Login To Your Account</span>
-        <button type="submit" id="LoginScreen"> <img src="/assets/images/logos_google-gmail.svg" alt="Gmail Logo"> Gmail</button>
+        <button type="submit" id="LoginScreen"> <img src="/assets/images/logos_google-gmail.svg" alt="Gmail Logo">
+            Gmail</button>
         <span class="or">or</span>
         <input type="text" id="number" placeholder="Enter Your Phone Number">
-        <button type="button" id="continue"><div>Continue</div> <img src="/assets/images/chevron-forward-outline.svg" alt=""></button>
+        <button type="button" id="continue">
+            <div>Continue</div> <img src="/assets/images/chevron-forward-outline.svg" alt="">
+        </button>
+
+
+        <!-- <div>
+            <label for="phoneNumber">Phone Number</label> <br>
+            <input type="tel" id="phoneNumber" name="phoneNumber" pattern="[0-9]" placeholder="Enter Your Number" /> <br>
+        </div>
+        <br>
+        <button id="getCode">Get Code</button>
+        <br>
+        <div>
+            <label for="code">Code</label> <br>
+            <input type="text" id="code" name="code" placeholder="Enter The OTP" /> <br>
+        </div>
+        <br>
+        <button id="signInWithPhone">Login</button> -->
+
         <!-- <input type="text" id="number" placeholder="+91...">
         <div id="recaptcha-container"></div>
         <button type="button" id="send">Login With Phone Number</button><br>
@@ -28,11 +47,9 @@
 
     <script type="module">
         // Import the functions you need from the SDKs you need
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.11/firebase-app.js";
-        import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.6.11/firebase-analytics.js";
-        import { getAuth, /* RecaptchaVerifier, signInWithPhoneNumber, */  signInWithPopup, signOut, onAuthStateChanged, GoogleAuthProvider } from "https://www.gstatic.com/firebasejs/9.6.11/firebase-auth.js";
-        // TODO: Add SDKs for Firebase products that you want to use
-        // https://firebase.google.com/docs/web/setup#available-libraries
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.8.1/firebase-app.js";
+        import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.8.1/firebase-analytics.js";
+        import { getAuth, RecaptchaVerifier, signInWithPhoneNumber, signInWithPopup, signOut, onAuthStateChanged, GoogleAuthProvider } from "https://www.gstatic.com/firebasejs/9.8.1/firebase-auth.js";
 
         // Your web app's Firebase configuration
         // For Firebase JS SDK v7.20.0 and later, measurementId is optional
@@ -51,48 +68,61 @@
         const app = initializeApp(firebaseConfig);
 
 
-        const auth = getAuth()
-        /* function getPhoneNumberFromUserInput() {
-            const bttn = document.getElementById("send");
-            bttn.addEventListener('click', function () {
-                return document.getElementById("number").value;
-            })
-        }
 
-        window.recaptchaVerifier = new RecaptchaVerifier('recaptcha-container', {
-            'size': 'normal',
+        const phoneNumberField = document.getElementById('phoneNumber');
+        const codeField = document.getElementById('code');
+        const getCodeButton = document.getElementById('getCode');
+        const signInWithPhoneButton = document.getElementById('signInWithPhone');
+
+
+        const auth = getAuth()
+
+        window.recaptchaVerifier = new RecaptchaVerifier('signInWithPhone', {
+            'size': 'invisible',
             'callback': (response) => {
                 // reCAPTCHA solved, allow signInWithPhoneNumber.
-                // ...
-            },
-            'expired-callback': () => {
-                // Response expired. Ask user to solve reCAPTCHA again.
-                // ...
+                onSignInSubmit();
             }
         }, auth);
 
-        const phoneNumber = '8630128769' // getPhoneNumberFromUserInput();
-        const appVerifier = window.recaptchaVerifier;
+        const sendVerificationCode = () => {
+            const phoneNumber = phoneNumberField.value;
+            const appVerifier = window.recaptchaVerifier;
 
-      
+            // Sends the 6 digit code to the user's phone
+            signInWithPhoneNumber(auth, `+91${phoneNumber}`, appVerifier)
+                .then(confirmationResult => {
+                    //const sentCodeId = confirmationResult.verificationId;
+                    window.confirmationResult = confirmationResult;
 
-        signInWithPhoneNumber(auth, phoneNumber, appVerifier)
-        .then((confirmationResult) => {
-            // SMS sent. Prompt user to type the code from the message, then sign the
-            // user in with confirmationResult.confirm(code).
-            window.confirmationResult = confirmationResult;
-            // ...
-        }).catch((error) => {
-            // Error; SMS not sent
-            // ...
-            console.log(error);
-        }); */
+                    // Sign in if the verification code is set correctly
+                    signInWithPhoneButton.addEventListener('click', () => signInWithPhone());
+                })
+                .catch((error) => {
+                    // Error; SMS not sent
+                    // ...
+                    window.alert("SMS Not Sent");
+                    console.log(error);
+                });
+        }
 
+        const signInWithPhone = () => {
+            const code = codeField.value;
+            confirmationResult.confirm(code).then((result) => {
+                // User signed in successfully.
+                const user = result.user;
+                window.alert("User signed in successfully!!");
+                console.log(user);
+                // ...
+            }).catch((error) => {
+                // User couldn't sign in (bad verification code?)
+                // ...
+                console.log(error);
+                window.alert("User couldn't sign in (bad verification code?)");
+            });
+        }
 
-
-
-
-
+        getCodeButton.addEventListener('click', sendVerificationCode);
 
 
 
@@ -132,24 +162,24 @@
                 abc(user)
                 location.href = '/dashboard'
             })
-            .catch((error) => {
-                const errorCode = error.code;
-                const errorMessage = error.message;
-                const email = error.email;
-                const credential = GoogleAuthProvider.credentialFromError(error);
-            })
+                .catch((error) => {
+                    const errorCode = error.code;
+                    const errorMessage = error.message;
+                    const email = error.email;
+                    const credential = GoogleAuthProvider.credentialFromError(error);
+                })
         }
 
         const abc = (user) => {
             const options = {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json'
-            },
-            body: JSON.stringify(user)
-        }
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify(user)
+            }
 
-        fetch('/teachers', options);
+            fetch('/teachers', options);
         }
 
         // function googleLogOut() {
